working minio to store avatars. small fixes required :)
