# internal/infrastructure/repository/dto/profile.go
@@ -7,7 +7,7 @@ type Profile struct {
 	Description string    `json:"description" db:"description"`
 	Age         int       `json:"age" db:"age"`
 	Location    string    `json:"location" db:"location"`
-	AvatarPath  string    `json:"avatar_url" db:"avatar_path"`
+	AvatarURL   string    `json:"avatar_url" db:"avatar_url"`
 	CreatedAt   time.Time `json:"created_at" db:"created_at"`
 	UpdatedAt   time.Time `json:"updated_at" db:"updated_at"`
 }
